--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nestjs/microservices": "^4.0.0",
     "@nestjs/testing": "^4.0.0",
     "@nestjs/websockets": "^4.0.0",
+    "array-includes": "^3.0.3",
+    "handlebars": "^4.0.11",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.0",
