--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/testing": "^4.0.0",
     "@nestjs/websockets": "^4.0.0",
     "array-includes": "^3.0.3",
+    "googleapis": "^22.2.0",
     "handlebars": "^4.0.11",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
