--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "start:watch": "nodemon",
     "prestart:prod": "tsc",
-    "start:prod": "node dist/server.js"
+    "start:prod": "node dist/server.js",
+    "test": "ts-node test/TestRunner.ts"
   },
   "dependencies": {
     "@nestjs/common": "^4.0.0",
@@ -15,10 +16,13 @@
     "@nestjs/microservices": "^4.0.0",
     "@nestjs/testing": "^4.0.0",
     "@nestjs/websockets": "^4.0.0",
+    "@types/core-js": "^0.9.43",
+    "@types/es6-promise": "0.0.33",
     "@types/express": "^4.0.39",
     "array-includes": "^3.0.3",
     "googleapis": "^22.2.0",
     "handlebars": "^4.0.11",
+    "promise": "^8.0.1",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.0",
