--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "target": "es6",
     "sourceMap": true,
     "allowJs": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "lib": ["es2015"]
   },
   "include": [
     "src/**/*"
