--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "array-includes": "^3.0.3",
     "googleapis": "^22.2.0",
     "handlebars": "^4.0.11",
+    "node-file-cache": "^1.0.2",
     "promise": "^8.0.1",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
